syntax = "proto3";

package polyglot.test;

option java_outer_classname = "TestProto";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "src/main/proto/testing/foo/foo.proto";

message TestRequest {
  string message = 1;
  foo.Foo foo = 2;
  int32 number = 3;
}

message TestResponse {
  string message = 1;
  google.protobuf.Any any = 2;
  google.protobuf.Duration duration = 3;
}

// Used as a payload type for the any message above.
message TunnelMessage {
  int32 number = 1;
}

service TestService {
  rpc TestMethod (TestRequest) returns (TestResponse) {}
  rpc TestMethodStream (TestRequest) returns (stream TestResponse) {}
  rpc TestMethodClientStream (stream TestRequest) returns (TestResponse) {}
  rpc TestMethodBidi (stream TestRequest) returns (stream TestResponse) {}
}
